# steam

./: CMakeLists.txt  README.md
data/: CMakeLists.txt  createteasubdb.sh  easyteacluster.sh  easyteasearch.sh  teacluster.sh  teasearch.sh
patches/: 0001-steam-bucket-filter.patch  0002-steam-cluster-prefilter-submat.patch  0003-steam-linclust-bucket-filter.patch  README.md
src/: CMakeLists.txt  LocalCommandDeclarations.h  SteamBase.cpp  steam.cpp
src/alignment/: CMakeLists.txt  TeaSmithWaterman.cpp  TeaSmithWaterman.h  teaalign.cpp  tearescorediagonal.cpp
src/commons/: CMakeLists.txt  LocalParameters.cpp  LocalParameters.h
src/util/: CMakeLists.txt  createteadb.cpp  createteasubdb.cpp  steamconvertalis.cpp
src/workflow/: CMakeLists.txt  EasyTeaCluster.cpp  EasyTeaSearch.cpp  TeaCluster.cpp  TeaClusterWrappers.cpp  TeaSearch.cpp
